fix: proof validation and text overflowing

--- a/src/components/shared/Proof/Proof.module.css
+++ b/src/components/shared/Proof/Proof.module.css
@@ -41,7 +41,6 @@
 
 .title p {
 	font-family: 'Quicksand', sans-serif;
-	font-size: 30px;
 	color: #ffffff;
 	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -51,7 +50,6 @@
 
 .summary {
 	padding: 10px 20px;
-	font-size: 24px;
 	width: 100%;
 }
 
@@ -96,4 +94,6 @@
 
 .content {
 	padding: 10px;
+	font-weight: 200;
 }
+
